--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
+
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: sans-serif;
-  background: white;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 body {
   margin: 0;
+  background: #00040ae4;
+}
+.dark {
+  background: #010816e4;
+}
+.dummy {
+  margin: 0;
+  padding: 0;
+  background-color: aliceblue;
+  width: 100%;
+  height: 100vh;
+}
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  background-color: rgba(242, 238, 238, 0.75);
 }
